Misc/that-day/deploy/deploy_sites.yaml
# Create Namespace

apiVersion: v1
kind: Namespace
metadata:
  name: jakarta

---

# Create deployment using service account, pvc

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: situs-diriku
  name: situs-diriku
  namespace: jakarta
spec:
  replicas: 3
  selector:
    matchLabels:
      app: situs-diriku
  strategy: {}
  template:
    metadata:
      labels:
        app: situs-diriku
    spec:
      serviceAccountName: sa-diriku
      automountServiceAccountToken: true
      containers:
      - image: nginx:stable
        name: situs-diriku
        volumeMounts:
            - mountPath: "/usr/share/nginx/html"
              name: pv-storage-diriku
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
        - name: pv-storage-diriku
          persistentVolumeClaim:
            claimName: pv-claim-diriku

---

# Service to expose pod port

apiVersion: v1
kind: Service
metadata:
  name: service-diriku
  namespace: jakarta
spec:
  type: ClusterIP
  selector:
    app : situs-diriku
  ports:
    - port: 8080
      targetPort: 80

---

# Expose service to port 80

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-diriku
  namespace: jakarta
spec:
  defaultBackend:
    service:
      name: service-diriku
      port:
        number: 8080
